# librecraft

./: .gitignore  .markdown-preview.html  CONTRIBUTING.md  CREDITS.md  Cargo.toml  ReadMe.md  TECHDOC.md  deny.toml  run1.sh  rustfmt.toml
assets/: settings.toml
assets/icon/: logo-highres.png-autosave.kra
client/: Cargo.toml  build.rs
client/src/: assets.rs  consts.rs  main.rs  music.rs  settings.rs  splash.rs
client/src/game/: mod.rs  player.rs
client/src/game/world/: mod.rs
client/src/game/world/skybox/: image.rs  mod.rs
client/src/gui/: mod.rs
client/src/gui/debug/: display.rs  fps.rs  mod.rs  setup.rs
client/src/gui/hud/: crosshair.rs  hotbar.rs  mod.rs
client/src/gui/menu/: mod.rs  pause.rs
docs/: RESOURCE_PACK.md  TECHDOC.md
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
src/: assets.rs  consts.rs  game.rs  handshake.rs  main.rs  music.rs  player.rs  settings.rs  splash.rs
src/debug/: display.rs  fps.rs  fps.rs~  mod.rs  setup.rs  setup.rs~
src/game/: mod.rs  player.rs
src/game/world/render/: block.rs
src/gui/: mod.rs
src/gui/debug/: display.rs  fps.rs  mod.rs  setup.rs
src/gui/hud/: crosshair.rs  hotbar.rs  mod.rs
src/gui/menu/: mod.rs  pause.rs  splash.rs
src/ui/: mod.rs
src/ui/hud/: crosshair.rs  hotbar.rs  mod.rs
