[package]
name = "librecraft"
version = "0.1.0"
edition = "2024"
description = "An open-source implementation of Minecraft client."

[features]
default = ["fast-compile"]
embed-assets = ["dep:bevy_embedded_assets"]
fast-compile = ["bevy/dynamic_linking"]
# on release, in order to disable dynamic linking, call cargo build -r --no-default-features
release = ["embed-assets"] 

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
bevy_embedded_assets = { version = "0.12.0", optional = true }
bevy_window_utils = {version = "0.15.3", default-features = false }
bevy_framepace = { version = "0.18.1", default-features = false }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
anyhow = "1.0.97"
rand = "0.9.0"
wgpu-types = "23.0.0"
# 1.0.200 to have same crate from valence_nbt.
serde = { version = "1.0.200", features = ["derive"] }
valence_nbt = { version = "0.8.0", features = ["binary", "serde"] }
# Using zlib instead of zlib-rs because bevy has it included.
flate2 = { version = "1.1.1", features = ["zlib"], default-features = false }
toml = "0.8.20"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
#	 "android-game-activity", ;
#	 "android_shared_stdcxx", ; needed for android support
	 "animation",
	 "bevy_animation",
	 "bevy_asset",
	 "bevy_audio",
	 "bevy_color",
	 "bevy_core_pipeline",
	 "bevy_gilrs",
	 "bevy_gizmos",
	 "bevy_gltf",
	 "bevy_mesh_picking_backend",
#	 "bevy_pbr" ; needed for probe reflections
	 "bevy_picking",
	 "bevy_render",
	 "bevy_scene",
	 "bevy_sprite",
	 "bevy_sprite_picking_backend",
	 "bevy_state",
	 "bevy_text",
	 "bevy_ui",
	 "bevy_ui_picking_backend",
	 "bevy_window",
	 "bevy_winit",
#	 "custom_cursor",
	 "default_font", # default fallback font
	 "hdr",
	 "ktx2",
	 "multi_threaded",
	 "png",
	 "smaa_luts",
	 "sysinfo_plugin",
	 "tonemapping_luts", # needed for camera2d/camera3d
	 "vorbis",
#	 "webgl2", ; needed for web
	 "x11",
	 "zstd" # needed for ktx2
	 ]
