# Welcome to librecraft project! This is a workspace of 3 projects, client, server, and shared.
# For contributing, please use what is stated in CONTRIBUTING.md

[workspace]
resolver = "2"
members = [
    "client", "server", "shared",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
debug = false

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
